written test cases